--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Module Testing</title>
-    <script type="text/javascript" src="lib/angular/angular.min.js"></script>
-    <script type="text/javascript" src="lib/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script type="text/javascript" src="lib/angular.min.js"></script>
+    <script type="text/javascript" src="lib/angular-ui-router.min.js"></script>
     <script type="text/javascript" src="routerHelperProvider.js"></script>
 
     <script type="text/javascript" src="src/amodule.js"></script>
@@ -24,7 +24,7 @@
                     {
                         state: 'home',
                         config: {
-                            template: '<a ui-sref="Chainsaw">Home</a>',
+                            template: '<a ui-sref="Chainsaw">Chainsaw</a>',
                             url: '/home'
                         }
                     }
