--- a/indexAfter.html
+++ b/indexAfter.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Module Testing</title>
-    <script type="text/javascript" src="lib/angular/angular.min.js"></script>
-    <script type="text/javascript" src="lib/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script type="text/javascript" src="lib/angular.min.js"></script>
+    <script type="text/javascript" src="lib/angular-ui-router.min.js"></script>
     <script type="text/javascript" src="routerHelperProvider.js"></script>
 
-    <script type="text/javascript" src="dist/itchy/Chainsaw.min.js"></script>
+    <script type="text/javascript" src="itchy/Chainsaw.min.js"></script>
 </head>
 <body ng-app="test">
     <script>
